--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
   />
+  <link
+          href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+          rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./styles/style.css"/>
+  <title>Dictionary</title>
 </head>
 <body>
 
