--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
       />
       <button id="search-btn">Search</button>
     </div>
-    <div class="result" id="result"></div>
+    <div class="result" id="result">
+      <div class="word">
+        <h3>Sample</h3>
+        <button>
+          <i class="fas fa-volume-up"></i>
+        </button>>
+      </div>
+    </div>
   </div>
   <script src="./src/main.js"></script>
 </body>
