--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <i class="fas fa-volume-up"></i>
         </button>>
       </div>
+      <div class="details">
+        <p>pos</p>
+        <p>/sample/</p>
+    </div>
     </div>
   </div>
   <script src="./src/main.js"></script>
