Added class 'word-meaning and -example'

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         <p>pos</p>
         <p>/sample/</p>
     </div>
+      <p class="word-meaning">
+        huyhuyhuyhyhyhyhyy
+        hyhyhyhyhyhyhyhyhy
+        hyhyhyhyhyhyhyhyhy.
+      </p>
+      <p class="word-example">
+        huyhuyhuyhyhyhyhyy
+        hyhyhyhyhyhyhyhyhy
+        hyhyhyhyhyhyhyhyhy.
+      </p>
     </div>
   </div>
   <script src="./src/main.js"></script>
